--- a/my-website/about.html
+++ b/my-website/about.html
@@ -10,5 +10,7 @@
     <a href="about.html">About Me</a>
     <h1>This is my About Page!</h1>
     <p>My name is Daniel Esteban Velez Quintero, I am 16 years old, and I'm currently in the Palmdale Aerospace Academy. </p>
+     <img src="images/images.jpg" height="250">
+     <img src="images/download.jpg" height="250">
 	  </body>
 	</html>
