--- a/my-website/about.html
+++ b/my-website/about.html
@@ -12,5 +12,7 @@
     <p>My name is Daniel Esteban Velez Quintero, I am 16 years old, and I'm currently in the Palmdale Aerospace Academy. </p>
      <img src="images/images.jpg" height="250">
      <img src="images/download.jpg" height="250">
+     <p>They said to add "pizzazz" so here you go</p>
+     <h2>p i z z a z z</h2>
 	  </body>
 	</html>
