--- a/my-website/index.html
+++ b/my-website/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Home</title>
   </head>
+  <style>
+  body {
+    background-color: black;
+  }
+      
+    
+  </style>
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
