--- a/my-website/index.html
+++ b/my-website/index.html
@@ -8,8 +8,11 @@
   body {
     background-color: black;
   }
-      
-    
+  </style>
+  <style>
+  body {
+    color: black;
+  }
   </style>
   <body>
     <a href="index.html">Home</a>
