--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -4,6 +4,16 @@
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
+	  <style>
+  body {
+    background-color: black;
+  }
+  </style>
+  <style>
+  body {
+    color: black;
+  }
+  </style>
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
