--- a/my-website/index.html
+++ b/my-website/index.html
@@ -20,5 +20,10 @@
     <a href="about.html">About Me</a>
     <h1>This is Daniel Velez's Home Page!</h1>
     <img src="images/home.jpg" height="250">
+    <style>
+      body{
+        color:white;
+      }
+    </style>
   </body>
 </html>
