--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -18,6 +18,11 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About Me</a></a>
+    <style>
+      body{
+        color:white;
+      }
+    </style>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
