--- a/my-website/about.html
+++ b/my-website/about.html
@@ -16,12 +16,12 @@
   </style>
 	  <body>
     <a href="index.html"><center>Home</center></a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About Me</a>
+    <a href="portfolio.html"><center>Portfolio</center></a>
+    <a href="about.html"><center>About Me</center></a>
     <h1><center>This is my About Page!</center></h1>
     <p><center>My name is Daniel Esteban Velez Quintero, I am 16 years old, and I'm currently in the Palmdale Aerospace Academy. </center></p>
-    <center> <img src="images/images.jpg" height="250"></center>
-     <center><img src="images/download.jpg" height="250"></center>
+    <center> <img src="images/images.jpg" height="250">
+     <img src="images/download.jpg" height="250"></center>
      <p><center>They said to add "pizzazz" so here you go</center></p>
      <h2><center>p i z z a z z</center></h2>
 	  </body>
