--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -15,9 +15,9 @@
   }
   </style>
 	  <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About Me</a></a>
+    <a href="index.html"><center>Home</center></a>
+    <a href="portfolio.html"><center>Portfolio</center></a>
+    <a href="about.html"><center>About Me</center></a>
     <style>
       body{
         color:white;
