--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -19,9 +19,13 @@
     <a href="portfolio.html"><center>Portfolio</center></a>
     <a href="about.html"><center>About Me</center></a>
     <style>
-      body{
-        color:white;
-      }
+      a:link {
+    color: white;
+}
+a:visited {
+    color:grey;
+}
+
     </style>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
