--- a/my-website/about.html
+++ b/my-website/about.html
@@ -14,6 +14,14 @@
     color: white;
   }
   </style>
+  <style>
+  a:link {
+    color: white;
+}
+a:visited {
+    color:grey;
+}
+</style>
 	  <body>
     <a href="index.html"><center>Home</center></a>
     <a href="portfolio.html"><center>Portfolio</center></a>
