--- a/my-website/index.html
+++ b/my-website/index.html
@@ -25,5 +25,13 @@
         color:white;
       }
     </style>
+      <style>
+  a:link {
+    color: white;
+}
+a:visited {
+    color:grey;
+}
+</style>
   </body>
 </html>
