--- a/my-website/index.html
+++ b/my-website/index.html
@@ -15,9 +15,9 @@
   }
   </style>
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About Me</a>
+    <a href="index.html"><center>Home</center></a>
+    <a href="portfolio.html"><center>Portfolio</center></a>
+    <a href="about.html"><center>About Me</center></a>
     <h1>This is Daniel Velez's Home Page!</h1>
     <img src="images/home.jpg" height="250">
     <style>
