--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -28,10 +28,10 @@ a:visited {
 
     </style>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+   <center> <img src="images/portfolio.jpg" height="250"></center>
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+     <center> <img src="images/scratchlogo.png" height="100"></center>
     </a>
 	  </body>
 	</html>
