--- a/my-website/index.html
+++ b/my-website/index.html
@@ -18,8 +18,8 @@
     <a href="index.html"><center>Home</center></a>
     <a href="portfolio.html"><center>Portfolio</center></a>
     <a href="about.html"><center>About Me</center></a>
-    <h1>This is Daniel Velez's Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <h1><center>This is Daniel Velez's Home Page!</center></h1>
+   <center> <img src="images/home.jpg" height="250"></center>
     <style>
       body{
         color:white;
