Even More Things

--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -27,7 +27,7 @@ a:visited {
 }
 
     </style>
-    <h1>This is my Portfolio Page!</h1>
+    <h1><center>This is my Portfolio Page!</center></h1>
    <center> <img src="images/portfolio.jpg" height="250"></center>
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
