--- a/my-website/index.html
+++ b/my-website/index.html
@@ -19,7 +19,7 @@
     <a href="portfolio.html"><center>Portfolio</center></a>
     <a href="about.html"><center>About Me</center></a>
     <h1><center>This is Daniel Velez's Home Page!</center></h1>
-   <center> <img src="images/home.jpg" height="250"></center>
+   <center><img src="images/download.jfif" height="250"></center>
     <style>
       body{
         color:white;
