--- a/my-website/index.html
+++ b/my-website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-  </head>
+  </head>`1
   <style>
   body {
     background-color: black;
