--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -32,7 +32,7 @@ a:visited {
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/241253780/">
      <center> <img src="images/scratchlogo.png" height="100"></center>
-     <center><a href="ai2.appinventor.mit.edu/?galleryid=5363611598979072">Musica</center>
+     <center><a target"_blank" href="ai2.appinventor.mit.edu/?galleryid=5363611598979072">Musica</center>
      <center><img src="images/pasted image 0.png"></center>
      <center><img src="images/unnamed.png"></center>
     </a>
