--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -33,7 +33,7 @@ a:visited {
     <a target="_blank" href="https://scratch.mit.edu/projects/241253780/">
      <center> <img src="images/scratchlogo.png" height="100"></center>
      <a target"_blank" href="ai2.appinventor.mit.edu/?galleryId=5363611598979072">
-     <center><img src="images/images (2).jpg"></center>    
+     <center><img src="images/images(2).jpeg"></center>    
      <center><img src="images/pasted image 0.png"></center>
      <center><img src="images/unnamed.png"></center>
     </a>
