--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -32,8 +32,8 @@ a:visited {
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/241253780/">
      <center> <img src="images/scratchlogo.png" height="100"></center>
-     <a target"_blank" href="ai2.appinventor.mit.edu/?galleryId=5363611598979072">
-     <center><img src="images/images(2).jpeg"></center>    
+     <a href="/images/MusicPicker.apk" download>
+     <center><img src="images/stupid.png"></center>    
      <center><img src="images/pasted image 0.png"></center>
      <center><img src="images/unnamed.png"></center>
     </a>
