--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -32,10 +32,12 @@ a:visited {
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/241253780/">
      <center> <img src="images/scratchlogo.png" height="100"></center>
-     <a href="/images/MusicPicker.apk" download>
+     <a href="images/justplaindumb.apk" download>
      <center><img src="images/stupid.png"></center>    
      <center><img src="images/pasted image 0.png"></center>
      <center><img src="images/unnamed.png"></center>
+     <a href="images/FINAL PROJECT !!.py" download>
+     
     </a>
 	  </body>
 	</html>
