--- a/my-website/portfolio.html
+++ b/my-website/portfolio.html
@@ -33,9 +33,8 @@ a:visited {
     <a target="_blank" href="https://scratch.mit.edu/projects/241253780/">
      <center> <img src="images/scratchlogo.png" height="100"></center>
 
-    <center><img src="images/stupid.png"></center>    
-    <center><img src="images/pasted image 0.png"></center>
-    <center><img src="images/unnamed.png"></center>
+    <a href="images/justplaindumb.apk"></a><center><img src="images/stupid.png"></center>    
+    
      
     <a href="images/FINAL PROJECT !!.py" download> <h2><center>Python Project</center></a></h2>
         <img src="images/Trench.png"></center>
